fix(orb-ui): #124 center align agent key (#2595)

--- a/ui/src/app/pages/fleet/agents/key/agent.key.component.scss
+++ b/ui/src/app/pages/fleet/agents/key/agent.key.component.scss
@@ -35,6 +35,7 @@ nb-card {
       align-content: space-between;
       align-items: flex-start;
       justify-content: space-between;
+      margin: 0;
 
       background: transparent;
       padding: 0.75rem;
